--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
 body {
-  font-size: 10px;
+  font-size: 2em;
   background-color: darkgrey;
   text-align: justify;
 }
@@ -10,7 +19,7 @@ li {
 
 h1 {
   font-weight: 900;
-  font-size: 2.4em;
+  font-size: 2.5em;
   letter-spacing: 0px;
 }
 
