--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  font-size: 2em;
+  font-size: 14px;
   background-color: darkgrey;
   text-align: justify;
 }
@@ -19,7 +19,7 @@ li {
 
 h1 {
   font-weight: 900;
-  font-size: 2.5em;
+  font-size: 2.3em;
   letter-spacing: 0px;
 }
 
